crates/hydracache-db/tests/policy/fail_required_dimensions_without_key_segments.rs
use hydracache_db::query_cache_policy;

fn main() {
    let _policy = query_cache_policy!(
        key = "users",
        required_dimensions = ["tenant"],
    );
}
